# array30-typing-tutor

./: .gitignore  .sb.json  AGENTS.md  Cargo.toml  DESIGN.md  Dioxus.toml  PROMPTS.md  QUICKSTART.md  README.md  architecture.puml  generate_data.py  package.json  tailwind.config.js  tailwind.css
assets/: dx-components-theme.css  styles.css  tailwind.css
flutter_app/: pubspec.yaml
flutter_app/lib/: array30_data.dart  main.dart  models.dart  storage.dart
flutter_app/web/: index.html  manifest.json
legacy/dioxus/src/: main.rs
legacy/dioxus/src/components/: mod.rs  practice_interface.rs  statistics.rs
legacy/dioxus/src/components/alert_dialog/: component.rs
legacy/dioxus/src/components/badge/: component.rs
legacy/dioxus/src/components/button/: component.rs
src/: app.rs  array30_data.rs  logic.rs  main.rs  storage.rs
src/components/: mod.rs  practice_interface.rs  statistics.rs
src/components/alert_dialog/: component.rs  style.css
src/components/badge/: component.rs  style.css
src/components/button/: component.rs  style.css
src/components/card/: component.rs  style.css
src/components/progress/: component.rs  mod.rs  style.css
src/components/separator/: component.rs
src/components/tabs/: component.rs  style.css
src/components/toast/: style.css
