[package]
name = "array30_typing_tutor"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"

[[bin]]
name = "array30_typing_tutor"
path = "src/main.rs"


