[package]
name = "array30_typing_tutor"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
chrono = { version = "0.4.43", features = ["serde", "wasmbind", "clock"] }

[[bin]]
name = "array30_typing_tutor"
path = "src/main.rs"
